--- a/.github/workflows/build-arm64.yml
+++ b/.github/workflows/build-arm64.yml
@@ -27,18 +27,16 @@ jobs:
         echo "Building ARM64 FastIO extension..."
         docker buildx build --platform linux/arm64 \
           -f Dockerfile.arm64 \
-          --output type=local,dest=./output \
+          --output type=local,dest=./ \
           .
         
-        # Verify the build
-        file ./output/fastio.so || echo "Note: file command not available"
-        ls -la ./output/fastio.so
+        
     
     - name: Upload ARM64 binary as artifact
       uses: actions/upload-artifact@v4
       with:
         name: fastio-arm64-binary
-        path: output/fastio.so
+        path: fastio.so
         retention-days: 90
     
     - name: Create release asset (on release)
@@ -48,6 +46,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ github.event.release.upload_url }}
-        asset_path: output/fastio.so
+        asset_path: fastio.so
         asset_name: fastio-arm64.so
         asset_content_type: application/octet-stream
