--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -3,7 +3,7 @@ FROM arm64v8/ubuntu:22.04
 # Install build dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
-    lua5.4-dev \
+    lua5.3-dev \
     pkg-config \
     file \
     && rm -rf /var/lib/apt/lists/*
@@ -11,18 +11,25 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /build
 COPY fastio_read_only.c .
 
-# Build with native ARM64 compilation
+# Build with native ARM64 compilation for Lua 5.3
 RUN gcc -O3 -fPIC -Wall -Wextra -std=c99 \
     -DLUA_COMPAT_5_3 -DLUA_USE_LINUX \
     -march=armv8-a -mtune=cortex-a72 \
     -DNDEBUG -flto -fstack-protector-strong \
     -D_FORTIFY_SOURCE=2 -fvisibility=hidden \
-    $(pkg-config --cflags lua5.4) \
+    $(pkg-config --cflags lua5.3) \
     -c fastio_read_only.c -o fastio.o
 
 RUN gcc -shared -fPIC -Wl,-soname,fastio.so \
     -Wl,--as-needed -Wl,-z,relro,-z,now -Wl,--strip-all \
     -o fastio.so fastio.o \
-    $(pkg-config --libs lua5.4) -lm -ldl
+    $(pkg-config --libs lua5.3) -lm -ldl
 
+# Verify the build and show file info
 RUN file fastio.so && ls -la fastio.so
+
+# Test the module can be loaded with Lua 5.3
+RUN echo 'local f = require("fastio"); print("ARM64 FastIO loaded:", type(f.read_chunk))' | lua5.3
+
+# Keep container running for file extraction
+CMD ["tail", "-f", "/dev/null"]
