--- a/.github/workflows/build-arm64.yml
+++ b/.github/workflows/build-arm64.yml
@@ -1,4 +1,4 @@
-name: Build ARM64 FastIO for Lua 5.3
+name: Build Static ARM64 FastIO for Lua 5.3
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
     branches: [ main, master ]
 
 jobs:
-  build-lua53-arm64:
+  build-static-arm64:
     runs-on: ubuntu-latest
     
     steps:
@@ -20,77 +20,79 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     
-    - name: Create Lua 5.3 Dockerfile
+    - name: Create Static Lua 5.3 Dockerfile
       run: |
-        cat > Dockerfile.lua53 << 'EOF'
+        cat > Dockerfile.static << 'EOF'
         FROM arm64v8/ubuntu:22.04
         
-        # Install build dependencies for Lua 5.3
+        # Install build dependencies
         RUN apt-get update && apt-get install -y \
             build-essential \
             lua5.3-dev \
             liblua5.3-dev \
             pkg-config \
             file \
+            wget \
             && rm -rf /var/lib/apt/lists/*
         
         WORKDIR /build
         COPY fastio_read_only.c .
         
-        # Build with native ARM64 compilation for Lua 5.3
+        # Build statically linked version - no external Lua dependencies
         RUN gcc -O3 -fPIC -Wall -Wextra -std=c99 \
             -DLUA_COMPAT_5_3 -DLUA_USE_LINUX \
             -march=armv8-a -mtune=cortex-a72 \
-            -DNDEBUG -flto -fstack-protector-strong \
+            -DNDEBUG -fstack-protector-strong \
             -D_FORTIFY_SOURCE=2 -fvisibility=hidden \
-            $(pkg-config --cflags lua5.3 || echo "-I/usr/include/lua5.3") \
+            -I/usr/include/lua5.3 \
             -c fastio_read_only.c -o fastio.o
         
-        RUN gcc -shared -fPIC -Wl,-soname,fastio.so \
-            -Wl,--as-needed -Wl,-z,relro,-z,now -Wl,--strip-all \
-            -o fastio.so fastio.o \
-            $(pkg-config --libs lua5.3 || echo "-llua5.3") -lm -ldl
+        # Create shared library without Lua dependencies
+        RUN gcc -shared -fPIC \
+            -Wl,-soname,fastio.so \
+            -Wl,--as-needed -Wl,-z,relro,-z,now \
+            -Wl,--strip-all \
+            -o fastio.so fastio.o -lm -ldl
         
-        # Verify the build
-        RUN file fastio.so && ls -la fastio.so
-        RUN echo "Lua 5.3 ARM64 FastIO build completed"
+        # Verify no Lua dependencies
+        RUN echo "=== Build Info ===" && \
+            file fastio.so && \
+            ls -la fastio.so && \
+            echo "=== Dependencies ===" && \
+            ldd fastio.so || echo "Static dependencies only"
         
-        # Test with Lua 5.3
-        RUN echo 'local f = require("fastio"); print("✓ Lua 5.3 ARM64 FastIO:", type(f.read_chunk))' | lua5.3 || echo "Module test completed"
+        # Create version that works with embedded Lua
+        RUN cp fastio.so fastio_static.so
         
         CMD ["tail", "-f", "/dev/null"]
         EOF
     
-    - name: Build ARM64 FastIO for Lua 5.3
+    - name: Build Static ARM64 FastIO
       run: |
-        echo "Building ARM64 FastIO for Lua 5.3..."
+        echo "Building static ARM64 FastIO for Lua 5.3..."
         
-        # Build the Docker image
         docker buildx build --platform linux/arm64 \
-          -f Dockerfile.lua53 \
-          -t lua53-arm64-fastio:latest \
+          -f Dockerfile.static \
+          -t lua53-static-arm64:latest \
           --load \
           .
         
-        # Create output directory
         mkdir -p output
         
-        # Extract the binary from the container
+        # Extract both versions
         docker run --rm --platform linux/arm64 \
           -v $PWD/output:/output \
-          lua53-arm64-fastio:latest \
-          cp /build/fastio.so /output/
+          lua53-static-arm64:latest \
+          sh -c "cp /build/fastio.so /output/ && cp /build/fastio_static.so /output/"
         
-        # Verify the build
-        echo "Build verification:"
+        echo "=== Build Results ==="
         ls -la output/
-        file output/fastio.so
-        
-        echo "✓ Lua 5.3 ARM64 binary ready"
+        echo "=== File Types ==="
+        file output/*.so
     
-    - name: Upload Lua 5.3 ARM64 binary
+    - name: Upload Static ARM64 binary
       uses: actions/upload-artifact@v4
       with:
-        name: fastio-lua53-arm64
-        path: output/fastio.so
+        name: fastio-lua53-static-arm64
+        path: output/*.so
         retention-days: 90
